<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".VolumeKubus">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/menghitung_volume_kubus"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="18dp"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/kubus" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="18dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:text="@string/sisi_kubus"/>
        <EditText
            android:id="@+id/edt_SisiKubus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:lines="1"/>

        <Button
            android:id="@+id/btn_Hitung_Kubus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hitung_" />

        <Button
            android:id="@+id/btn_Hapus_Kubus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hapus_"/>
        <TextView
            android:id="@+id/tv_Hasil_Kubus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hasil_"
            android:textSize="24sp"
            android:textStyle="bold"/>


    </LinearLayout>

</ScrollView>
